syntax = "proto3";

package ServiceProtocol;

message ActionResponse {
	int32 result = 1;
}

message ActionType {
	int32 id = 1;
	string name = 2;
	string description = 3;
}
